// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderTextInput snapshot test error = true 1`] = `
<div>
  <h6>
    content
  </h6>
  <input
    className="form-control"
    disabled={false}
    placeholder="content"
    type="text"
  />
  <h6
    className="text-danger"
  >
    <span />
  </h6>
</div>
`;

exports[`renderTextInput snapshot test meta: {} 1`] = `
<div>
  <h6>
    content
  </h6>
  <input
    className="form-control"
    disabled={false}
    placeholder="content"
    type="text"
  />
  <h6
    className="text-danger"
  />
</div>
`;

exports[`renderTextInput snapshot test touched = false 1`] = `
<div>
  <h6>
    content
  </h6>
  <input
    className="form-control"
    disabled={false}
    placeholder="content"
    type="text"
  />
  <h6
    className="text-danger"
  />
</div>
`;

exports[`renderTextInput snapshot test touched = true 1`] = `
<div>
  <h6>
    content
  </h6>
  <input
    className="form-control"
    disabled={false}
    placeholder="content"
    type="text"
  />
  <h6
    className="text-danger"
  />
</div>
`;

exports[`renderTextInput snapshot test warning = true 1`] = `
<div>
  <h6>
    content
  </h6>
  <input
    className="form-control"
    disabled={false}
    placeholder="content"
    type="text"
  />
  <h6
    className="text-danger"
  >
    <span />
  </h6>
</div>
`;
